# testetst

./: .gitignore  Cargo.toml  Makefile  README.md  copy_assets.sh
assets/: fireminion.gltf  img.basis  imgextracted.basis  level.glb  manifest.manifest.ron  postproc.wgsl
bevy_mobile_example.xcodeproj/: .gitignore  project.pbxproj
src/: asset.rs  billboard.rs  enemy.rs  item.rs  lib.rs  main.rs  test.md
