[package]
name = "horror_roguelike"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13.0", features = ["asset_processor"] }
wgpu-types = { version = "0.19.0" }

[features]
default = ["postproc", "watcher"]
postproc = []
watcher = ["bevy/embedded_watcher", "bevy/file_watcher"]