[package]
name = "bevy_mobile_example"
# Version is required by `cargo-apk`, though this value will never change.
version = "0.0.0"
edition = "2021"
publish = false

[lib]
name = "bevy_mobile_example"
crate-type = ["staticlib", "cdylib"]

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.14"

[target.aarch64-apple-ios-sim.dependencies]
bevy = { version = "0.14", features = ["ios_simulator"] }
